// Generated by j5build v0.0.0-20250926000631-d7cf67a73bb8. DO NOT EDIT

syntax = "proto3";

package test.query.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "j5/ext/v1/annotations.proto";
import "j5/list/v1/annotations.proto";

message FooState {
  option (j5.ext.v1.message).object = {};

  message Keys {
    option (j5.ext.v1.message).object = {};

    string foo_id = 1 [
      (buf.validate.field) = {
        required: true
        string: {
          uuid: true
        }
      },
      (j5.ext.v1.field).key.format = FORMAT_UUID,
      (j5.list.v1.field).string.foreign_key.uuid.filtering.filterable = true
    ];

    optional string tenant_id = 2 [
      (buf.validate.field).string.uuid = true,
      (j5.ext.v1.field).key.format = FORMAT_UUID,
      (j5.list.v1.field).string.foreign_key.uuid.filtering.filterable = true
    ];

    string meta_tenant_id = 3 [
      (buf.validate.field).string.uuid = true,
      (j5.ext.v1.field).key.format = FORMAT_UUID,
      (j5.list.v1.field).string.foreign_key.uuid.filtering.filterable = true
    ];
  }

  Keys keys = 1 [(j5.ext.v1.field).object.flatten = true];

  google.protobuf.Timestamp created_at = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).timestamp = {},
    (j5.list.v1.field).timestamp = {
      filtering: {
        filterable: true
      }
      sorting: {
        sortable: true
        default_sort: true
      }
    }
  ];

  FooStatus status = 3 [
    (buf.validate.field).enum.defined_only = true,
    (j5.ext.v1.field).enum = {},
    (j5.list.v1.field).enum.filtering = {
      filterable: true
      default_filters: ["ACTIVE"]
    }
  ];

  message Data {
    option (j5.ext.v1.message).object = {};

    string name = 1 [
      (j5.ext.v1.field).string = {},
      (j5.list.v1.field).string.open_text.searching = {
        searchable: true
        field_identifier: "tsv_name"
      }
    ];

    string field = 2 [
      (j5.ext.v1.field).string = {},
      (j5.list.v1.field).string.open_text.searching = {
        searchable: true
        field_identifier: "tsv_field"
      }
    ];

    optional string description = 3 [
      (j5.ext.v1.field).string = {},
      (j5.list.v1.field).string.open_text.searching = {
        searchable: true
        field_identifier: "tsv_description"
      }
    ];

    message Shape {
      option (j5.ext.v1.message).oneof = {};

      oneof type {
        Circle circle = 1 [(j5.ext.v1.field).object = {}];

        Square square = 2 [(j5.ext.v1.field).object = {}];
      }

      message Circle {
        option (j5.ext.v1.message).object = {};

        int64 radius = 1 [
          (j5.ext.v1.field).integer = {},
          (j5.list.v1.field).int64 = {
            filtering: {
              filterable: true
            }
            sorting: {
              sortable: true
            }
          }
        ];
      }

      message Square {
        option (j5.ext.v1.message).object = {};

        int64 side = 1 [
          (j5.ext.v1.field).integer = {},
          (j5.list.v1.field).int64 = {
            filtering: {
              filterable: true
            }
            sorting: {
              sortable: true
            }
          }
        ];
      }
    }

    Shape shape = 4 [
      (j5.ext.v1.field).oneof = {},
      (j5.list.v1.field).oneof.filtering.filterable = true
    ];

    bool is_active = 5 [
      (j5.ext.v1.field).bool = {},
      (j5.list.v1.field).bool.filtering.filterable = true
    ];

    FooCharacteristics characteristics = 6 [(j5.ext.v1.field).object = {}];

    repeated FooProfile profiles = 7 [(j5.ext.v1.field).array = {}];
  }

  Data data = 4 [(j5.ext.v1.field).object = {}];
}

message FooCharacteristics {
  option (j5.ext.v1.message).object = {};

  int64 weight = 1 [
    (j5.ext.v1.field).integer = {},
    (j5.list.v1.field).int64 = {
      filtering: {
        filterable: true
      }
      sorting: {
        sortable: true
      }
    }
  ];

  int64 height = 2 [
    (j5.ext.v1.field).integer = {},
    (j5.list.v1.field).int64 = {
      filtering: {
        filterable: true
      }
      sorting: {
        sortable: true
      }
    }
  ];

  int64 length = 3 [
    (j5.ext.v1.field).integer = {},
    (j5.list.v1.field).int64 = {
      filtering: {
        filterable: true
      }
      sorting: {
        sortable: true
      }
    }
  ];
}

message FooProfile {
  option (j5.ext.v1.message).object = {};

  int64 place = 1 [
    (j5.ext.v1.field).integer = {},
    (j5.list.v1.field).int64.filtering.filterable = true
  ];

  string name = 2 [
    (j5.ext.v1.field).string = {},
    (j5.list.v1.field).string.open_text.searching = {
      searchable: true
      field_identifier: "tsv_profile_name"
    }
  ];
}

enum FooStatus {
  FOO_STATUS_UNSPECIFIED = 0;
  FOO_STATUS_ACTIVE = 1;
  FOO_STATUS_DELETED = 2;
}
